[project]
name = "oigtl"
version = "0.1.0"
description = "Typed Python wire codec for the OpenIGTLink protocol."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
    { name = "openigtlink-ng contributors" },
]
# pydantic gives us per-message typed classes with recursive
# nested-model construction for struct-array fields.
# oigtl-corpus-tools provides the codec primitives (pack_fields,
# unpack_fields, crc64, header helpers). Schemas themselves are
# baked into the generated message classes as Python literals
# so the runtime library has no filesystem dependency.
dependencies = [
    "pydantic>=2.5",
    "oigtl-corpus-tools",
    # crcmod is a tiny C extension that gives the underlying codec a
    # ~37× CRC-64 speedup. Without it CRC dominates parse_message
    # latency on multi-KB bodies (~250 µs for a 2.5 KB IMAGE body
    # vs ~6 µs with the fast path). It's a hard runtime dep here
    # because the typed library exists to be used in real code,
    # not just to round-trip fixtures.
    "crcmod>=1.7",
    # ifaddr is a tiny pure-Python library (no C build step) that
    # gives us cross-platform interface enumeration — needed by
    # Server.restrict_to_local_subnet() and friends. Keeping it as
    # a base dep rather than an extra means the transport API
    # surface "just works" out of the box; the alternative makes a
    # documented feature fail at import unless the user knew to
    # ask for oigtl[net]. psutil is also recognized at runtime if
    # present, for users who already have it.
    "ifaddr>=0.2.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
# `numpy` extra: enables ndarray-valued variable-count non-uint8
# primitive array fields (SENSOR.data, POSITION.quaternion variable,
# etc.). Without it the library falls back to stdlib ``array.array``.
# Mirrors the convention used by polars[numpy] / pyarrow[numpy] /
# pandas[numpy]. See src/oigtl/runtime/arrays.py.
numpy = [
    "numpy>=1.24",
]
dev = [
    "pytest>=8",
    "numpy>=1.24",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "numpy>=1.24",
    "pytest-asyncio>=1.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/oigtl"]

[tool.uv.sources]
oigtl-corpus-tools = { path = "../corpus-tools", editable = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
asyncio_mode = "auto"
# pytest-asyncio's "auto" mode picks up `async def test_...` without
# per-test @pytest.mark.asyncio; keeps the test files clean and
# matches the sync-first style of the rest of the suite.
