[project]
name = "oigt-corpus-tools"
version = "0.1.0"
description = "Tooling for the openigtlink-ng conformance corpus: schema validation, corpus generation, differential testing."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
    { name = "openigtlink-ng contributors" },
]
dependencies = [
    "jsonschema>=4.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[project.scripts]
oigt-corpus = "oigt_corpus_tools.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/oigt_corpus_tools"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
