[project]
name = "oigtl-corpus-tools"
version = "0.1.0"
description = "Tooling for the openigtlink-ng conformance corpus: schema validation, corpus generation, differential testing."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
    { name = "openigtlink-ng contributors" },
]
dependencies = [
    "pydantic>=2.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[project.scripts]
oigtl-corpus = "oigtl_corpus_tools.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/oigtl_corpus_tools"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
